--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "clsx": "^2.1.0",
     "convex": "^1.10.0",
     "dotenv": "^16.4.5",
+    "embla-carousel-react": "^8.0.0",
     "framer-motion": "^11.0.8",
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
