--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "@tiptap/pm": "^2.2.4",
     "@tiptap/react": "^2.2.4",
     "@tiptap/starter-kit": "^2.2.4",
+    "@xixixao/uploadstuff": "^0.0.5",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
     "convex": "^1.10.0",
     "dotenv": "^16.4.5",
@@ -41,7 +43,8 @@
     "highlight.js": "^11.9.0",
     "lowlight": "^3.1.0",
     "lucide-react": "^0.354.0",
-    "next": "14.1.3",
+    "next": "^14.1.4",
+    "next-cloudinary": "^6.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
