--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:backend\"",
+    "dev:frontend": "next dev",
+    "dev:backend": "npx convex dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
-  },
+    "deploy": "vercel"
+  },  
   "dependencies": {
     "@clerk/clerk-react": "^4.30.7",
     "@clerk/nextjs": "^4.29.9",
@@ -57,6 +59,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
